upgrade springboot from 2.7.15 to 3.1.3 and java version from 11 to 17 (#12) (#15)
* upgrade springboot from 2.7.15 to 3.1.3 and java version from 11 to 17

* remove unused code

* upgrade maven wrapper version

* resolve pr comment

Co-authored-by: Astha Singh <43131592+astha-singh-2445@users.noreply.github.com>